Update processPaymentReturn